--- a/main.css/index.html
+++ b/main.css/index.html
@@ -8,17 +8,31 @@
   
 </head>
 <body>
-  <h1>Hello Kadeeja!</h1>
 </body>
 </html>
 
 <div class="container">
   <div class="Header\(Featured-Shows\)">
+    <div class="header-links">
+    <a href="">Griot Theatre</a>
+    <a href="">Home</a>
+    <a href="">Features</a>
+    <a href="">Our Actors</a>
+    <a href="">Mission</a>
+    <a href="">Contact</a>
+    <img src="https://picsum.photos/500" alt="placeholder">
+    </div>
+
+
     <div class="border3"></div>
   </div>
   <div class="Ticket-Sales">
-    <div class="img">
-      <div class="img2"></div>
+
+    <div class="img-container">
+    </div>
+
+      <div class="img2">
+      </div>
       <div class="img3"></div>
       <div class="img4"></div>
       <div class="title"></div>
